# uwavclient

./: README.md
docs/: CREDITS.md  PROTOCOL.md
src/: CMakeLists.txt  localconfig.cpp  localconfig.h  main.cpp  sioevent.h  u_audioprovider.cpp  u_audioprovider.h  u_enginestatistics.cpp  u_enginestatistics.h  u_interfacedescriptor.h  u_ringbuffer.cpp  u_ringbuffer.h  u_sharedfunctions.h  uwavclient.cpp  uwavclient.h  uwavclient.ui
src/sio/: sio_socket.cpp  sio_socket.h
src/sio/internal/: sio_packet.cpp
